Funcionamiento base de la API
Con retornos genéricos y basic authorization
